backend: replace .collect(Collectors.toList()) with .toList()