@@ -9,7 +9,6 @@ import java.util.NoSuchElementException;
 
 import static de.neuefische.booklibrary.backend.book.Availability.AVAILABLE;
 import static de.neuefische.booklibrary.backend.book.Availability.NOT_AVAILABLE;
-import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
@@ -64,6 +63,6 @@ public class BookService {
     public List<Book> getRentedBooks(String username) {
         List<Book> books = bookRepository.findAll();
         return books.stream()
-                .filter(book -> book.rentedBy() != null && book.rentedBy().equals(username)).collect(toList());
+                .filter(book -> book.rentedBy() != null && book.rentedBy().equals(username)).toList();
     }
 }
